# unified-cache-management

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  Jenkinsfile  MANIFEST.in  README.md  README_zh.md  metrics_configs.yaml  pyproject.toml  requirements.txt  setup.py  summary.py  ucm_obser.py  ucm_patch.pth
ucm/csrc/kvstar_retrieve/: CMakeLists.txt
ucm/csrc/kvstar_retrieve/core/: CMakeLists.txt
ucm/metrics/: CMakeLists.txt  grafana.json  metrics_configs.yaml  ucm_obser.py
ucm/metrics/cc/: stats_monitor.cc  stats_monitor.h  stats_registry.cc  stats_registry.h
ucm/metrics/cc/stats/: istats.h  ucm_stats.cc  ucm_stats.h
ucm/metrics/cpy/: metrics.py.cc
ucm/metrics/test/: test.py
ucm/shared/infra/: CMakeLists.txt
ucm/shared/infra/logger/: CMakeLists.txt  logger.cc  logger.h
ucm/shared/infra/template/: handle_recorder.h  hashset.h  topn_heap.h
ucm/shared/infra/thread/: cpu_affinity.h  index_pool.h  latch.h  thread_pool.h
ucm/shared/metrics/: CMakeLists.txt  observability.py
ucm/shared/metrics/cc/: metrics.cc  metrics.h  stats_monitor.cc  stats_monitor.h  stats_registry.cc  stats_registry.h
ucm/shared/metrics/cpy/: metrics.py.cc
ucm/shared/metrics/test/: test.py
ucm/shared/test/: CMakeLists.txt
ucm/shared/trans/: CMakeLists.txt  buffer.h  device.h  status.h  stream.h
ucm/shared/trans/ascend/: ascend_buffer.cc  ascend_buffer.h  ascend_device.cc  ascend_stream.cc  ascend_stream.h
ucm/shared/trans/cuda/: cuda_buffer.cc  cuda_buffer.h  cuda_device.cc  cuda_sm_kernel.cu  cuda_stream.cc  cuda_stream.h
ucm/shared/trans/detail/: reserved_buffer.h
ucm/shared/trans/simu/: simu_buffer.cc  simu_buffer.h  simu_device.cc  simu_stream.cc  simu_stream.h
ucm/sparse/: CMakeLists.txt  base.py  factory.py  state.py  utils.py
ucm/sparse/blend/: blend.py  blockwise_rope.py  chunk_processor.py  utils.py
ucm/sparse/esa/: CMakeLists.txt  build_utils.py  esa.py  esa_kernels.cu  esa_new.py
ucm/sparse/esa/retrieval/: CMakeLists.txt
ucm/sparse/gsa/: gsa.py
ucm/sparse/gsa/prefetch/: CMakeLists.txt  prefetch_engine.py
ucm/sparse/gsa_on_device/: CMakeLists.txt  gsa_on_device.py  gsa_on_device_config.py  hamming_topk.py  hash_encoder.py
ucm/sparse/gsa_on_device/configs/: gsa_on_device_deepseek_r1_awq_config.json  gsa_on_device_deepseek_v2_lite_config.json  gsa_on_device_qwen3_32B_config.json  gsa_on_device_qwen3_4B_config.json  gsa_on_device_qwen3_coder_30B_A3B_Instruct_FP8.json  gsa_on_device_qwen3_coder_30B_A3B_config.json
ucm/sparse/gsa_on_device/ham_dist/: paged_ham_dist_mla.cu
ucm/sparse/kvcomp/: CMakeLists.txt  hamming_topk.py  hash_code.py  kvcomp.py  kvcomp_hbm.py
ucm/sparse/kvcomp/ham_dist/: CMakeLists.txt  paged_ham_dist_mla.cu
ucm/sparse/kvcomp/hash_retrieval/: CMakeLists.txt
ucm/sparse/kvstar/: multistep.py  utils.py
ucm/sparse/kvstar/retrieve/: CMakeLists.txt
ucm/sparse/rerope/: triton_unified_attention_rerope.py
ucm/sparse/test/gsa/: test_cuda_cache_and_hash-mla.py
ucm/store/: CMakeLists.txt  base.py  factory.py  factory_v1.py  ucm_dram.py  ucm_mooncake.py  ucm_nfs_store.py  ucmstore.h  ucmstore.py  ucmstore_v1.h  ucmstore_v1.py
ucm/store/cache/: CMakeLists.txt  connector.py
ucm/store/cache/cc/: buffer_manager.h  cache_store.cc  cache_store.h  copy_stream.h  dump_queue.cc  dump_queue.h  global_config.h  load_queue.cc  load_queue.h  posix_shm.h  trans_buffer.cc  trans_buffer.h  trans_manager.h
ucm/store/cache/cpy/: cache_store.py.cc
ucm/store/compress/: CMakeLists.txt  connector.py
ucm/store/compress/cc/: c_compress.cc  c_compress.h  compressor.cc  compressor.h  compressor_action.cc  compressor_action.h  global_config.h  memory_pool.h  trans_manager.h  trans_task.h
ucm/store/compress/cpy/: compressor.py.cc
ucm/store/connector/: nfsstore_connector.py  ucmstore.py
ucm/store/detail/task/: task_manager.h  task_shard.h
ucm/store/detail/template/: store_binder.h  task_wrapper.h
ucm/store/detail/type/: dictionary.h  types.h
ucm/store/device/: CMakeLists.txt  ibuffered_device.h  idevice.h
ucm/store/device/ascend/: CMakeLists.txt  ascend_device.cc
ucm/store/device/cuda/: CMakeLists.txt  cuda_device.cc  cuda_device.cu  file_handle_cache.h  sharded_handle_recorder.h
ucm/store/device/simu/: simu_device.cc
ucm/store/dramstore/: CMakeLists.txt  dramstore_connector.py
ucm/store/dramstore/cpy/: dramstore.py.cc
ucm/store/ds3fs/: CMakeLists.txt  connector.py
ucm/store/ds3fs/cc/: ds3fs_file.cc  ds3fs_file.h  ds3fs_store.cc  ds3fs_store.h  global_config.h  space_layout.cc  space_layout.h  space_manager.cc  space_manager.h  trans_queue.cc  trans_queue.h
ucm/store/ds3fs/cpy/: ds3fs_store.py.cc
ucm/store/ds3fs_store/: CMakeLists.txt  ds3fs_store_connector.py
ucm/store/ds3fsstore/: CMakeLists.txt  ds3fsstore_connector.py
ucm/store/ds3fsstore/cpy/: ds3fsstore.py.cc
ucm/store/empty/: CMakeLists.txt  connector.py
ucm/store/empty/cc/: empty_store.cc
ucm/store/empty/cpy/: empty_store.py.cc
ucm/store/fake/: CMakeLists.txt  connector.py
ucm/store/fake/cc/: fake_store.cc  fake_store.h  global_config.h  meta_manager.cc
ucm/store/fake/cpy/: fake_store.py.cc
ucm/store/fsstore/: CMakeLists.txt  fsstore_connector.py
ucm/store/fsstore/cpy/: fsstore.py.cc
ucm/store/infra/: CMakeLists.txt
ucm/store/infra/file/: file.cc  file.h  ifile.h  posix_file.cc  posix_file.h
ucm/store/infra/memory/: memory_pool.h
ucm/store/infra/status/: status.h
ucm/store/infra/template/: handle_recorder.h  hashmap.h  timer.h  topn_heap.h
ucm/store/infra/thread/: latch.h  thread_pool.h
ucm/store/localstore/: CMakeLists.txt
ucm/store/mooncakestore/: mooncake_connector.py
ucm/store/nfsstore/: CMakeLists.txt  nfsstore_connector.py
ucm/store/pcstore/: CMakeLists.txt  pcstore_connector.py  pcstore_connector_v1.py
ucm/store/pipeline/: CMakeLists.txt  connector.py
ucm/store/posix/: CMakeLists.txt  connector.py
ucm/store/posix/cc/: aio_engine.cc  (+25 more)
ucm/store/task/: task_queue.h  task_shard.h  task_waiter.h
ucm/store/test/: CMakeLists.txt
unifiedcache/csrc/ucmlocalstore/: CMakeLists.txt
(+816 files in other folders)
