[build-system]
requires = ["setuptools>=45", "wheel", "cmake", "torch", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "uc-manager"
authors = [{name = "UCM Team"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "Persist and reuse KV Cache to speedup your LLM."
requires-python = ">=3.10"
dynamic = [ "version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage="https://github.com/ModelEngine-Group/unified-cache-management"
Documentation="https://ucm.readthedocs.io/en/latest"
WeChat="https://github.com/ModelEngine-Group/unified-cache-management/blob/develop/docs/source/_static/images/qrcode_for_wechat.png?raw=true"
