set(LOGGER_BACKEND "spdlog" CACHE STRING "backend: spdlog or flux.")

include_directories(.)
add_subdirectory(infra)
add_subdirectory(device)
add_subdirectory(nfsstore)
add_subdirectory(pcstore)
add_subdirectory(ds3fs_store)
add_subdirectory(dramstore)
add_subdirectory(localstore)
add_subdirectory(mooncakestore)
add_subdirectory(task)
add_subdirectory(test)
