if(RUNTIME_ENVIRONMENT STREQUAL "ascend")
    add_subdirectory(ascend)
endif()
if(RUNTIME_ENVIRONMENT STREQUAL "cuda")
    add_subdirectory(cuda)
endif()
if(RUNTIME_ENVIRONMENT STREQUAL "simu")
    add_subdirectory(simu)
endif()
target_include_directories(trans PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_link_libraries(trans PUBLIC infra_status)

file(GLOB_RECURSE UCMTRANS_CPY_SOURCE_FILES "./cpy/*.cc")
pybind11_add_module(ucmtrans ${UCMTRANS_CPY_SOURCE_FILES})
target_link_libraries(ucmtrans PRIVATE trans)
set_target_properties(ucmtrans PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
