file(GLOB_RECURSE UCM_POSIX_STORE_CC_SOURCE_FILES "./cc/*.cc")
find_library(URING_LIB uring)
if(URING_LIB)
    set(UCM_HAS_LIBURING 1)
else()
    set(UCM_HAS_LIBURING 0)
    foreach(src IN LISTS UCM_POSIX_STORE_CC_SOURCE_FILES)
        if(src MATCHES ".*/cc/(io_uring|async_trans_queue)\\.cc$")
            list(REMOVE_ITEM UCM_POSIX_STORE_CC_SOURCE_FILES "${src}")
        endif()
    endforeach()
    message(WARNING "liburing not found, posixstore will be built without io_uring support")
endif()

add_library(posixstore SHARED ${UCM_POSIX_STORE_CC_SOURCE_FILES})
target_include_directories(posixstore PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/cc)
target_compile_definitions(posixstore PUBLIC UCM_HAS_LIBURING=${UCM_HAS_LIBURING})
target_link_libraries(posixstore PUBLIC storeintf infra_logger)
if(URING_LIB)
    target_link_libraries(posixstore PUBLIC ${URING_LIB})
endif()

file(RELATIVE_PATH INSTALL_REL_PATH ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
install(TARGETS posixstore LIBRARY DESTINATION ${INSTALL_REL_PATH} COMPONENT ucm)
